--- a/angular.json
+++ b/angular.json
@@ -49,13 +49,25 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular/build:dev-server",
+          "options": {
+            "host": "local.marcobarden.de",
+            "sslKey": "src/environments/certs/mkcert/local.marcobarden.de-key.pem",
+            "sslCert": "src/environments/certs/mkcert/local.marcobarden.de.pem",
+            "ssl": true
+          },
           "configurations": {
             "production": {
               "buildTarget": "angular_streamify:build:production"
